# robonomics_game

./: .travis.yml  CMakeLists.txt  README.md  package.xml  setup.py
action/: Order.action  Stacker.action
launch/: plant_mill.launch  storage.launch  supplier.launch  supply_chain.launch  supply_chain_cnc.launch  supply_chain_driller.launch  supply_chain_miller.launch  supply_chain_welder.launch
robonomics_consumers/: CMakeLists.txt  package.xml  setup.py
robonomics_consumers/launch/: consumers_ask.launch
robonomics_consumers/scripts/: consumers.py  consumers_node  owner_secret.json
robonomics_consumers/srv/: Call.srv
robonomics_game/: package.xml
robonomics_game_common/: CMakeLists.txt  package.xml  setup.py
robonomics_game_common/src/robonomics_game_common/: marketdata.py  opcua_client.py  utils.py
robonomics_game_common/srv/: Step.srv
robonomics_game_consumers/: CMakeLists.txt  package.xml  setup.py
robonomics_game_consumers/launch/: consumers_ask.launch
robonomics_game_consumers/scripts/: consumers.py  consumers_node  countdown_timer.py  launch_info_model.py  web3info.py
robonomics_game_plant/: CMakeLists.txt  package.xml
robonomics_game_plant/launch/: plant_mill.launch
robonomics_game_plant/scripts/: plant_node.py
robonomics_game_supply/: CMakeLists.txt  package.xml
robonomics_game_supply/launch/: supply_chain.launch  supply_chain_2.launch  supply_chain_3.launch  supply_chain_4.launch  supply_chain_cnc.launch  supply_chain_driller.launch  supply_chain_miller.launch  supply_chain_welder.launch
robonomics_game_supply/scripts/: supply_node
robonomics_game_supply/src/robonomics_game_supply/: nodes.py  supply.py  supply_chain.py
robonomics_game_transport/: CMakeLists.txt  package.xml
robonomics_game_transport/action/: Stacker.action  Transport.action
robonomics_game_transport/launch/: storage.launch  supplier.launch  transport.launch
robonomics_game_transport/scripts/: color_sensor_node.py  conveyor_node.py  opcua_client.py  stacker.py  stacker_node.py  storage_node.py  supplier_node.py
robonomics_game_transport/srv/: Conveyor.srv
robonomics_game_warehouse/: CMakeLists.txt  package.xml
robonomics_game_warehouse/launch/: warehouse.launch
robonomics_game_warehouse/scripts/: warehouse.py  warehouse_node.py
robonomics_game_warehouse/srv/: Order.srv  Place.srv  QuantityAvailable.srv
scripts/: color_sensor_node.py  conveyor_node.py  opcua_client.py  plant_node.py  stacker.py  storage_node.py  supplier_node.py  warehouse.py
src/robonomics_game_supply/: supply.py  supply_chain.py
srv/: Content.srv  ConveyorLoad.srv
