<?xml version="1.0"?>
<package format="2">
  <name>robonomics_game</name>
  <version>0.0.1</version>
  <description>The robonomics_game package</description>
  <maintainer email="a.khssnv@gmail.com">Alisher A. Khassanov</maintainer>
  <license>BSD3</license>
  <url type="repository">https://github.com/airalab/robonomics_game</url>
  <url type="video">https://youtu.be/sFSC-9TZYOY</url> -->
  <author email="a.khssnv@gmail.com">Alisher A. Khassanov</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robonomics_game_warehouse</exec_depend>
  <exec_depend>robonomics_game_plant</exec_depend>
  <exec_depend>robonomics_game_transport</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
