<?xml version="1.0"?>
<package format="2">
  <name>robonomics_game_common</name>
  <version>0.1.0</version>
  <description>The robonomics_game_common package</description>
  <maintainer email="alisher@aira.life">Alisher A. Khassanov</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/airalab/robonomics_game</url>
  <buildtool_depend>catkin</buildtool_depend>
</package>
