<?xml version="1.0"?>
<package>
  <name>robonomics_game_plant</name>
  <version>0.0.1</version>
  <description>The robonomics_game_plant package</description>
  <maintainer email="a.khssnv@gmail.com">Alisher A. Khassanov</maintainer>
  <license>BSD3</license>
  <url type="repository">https://github.com/airalab/robonomics_game</url>
  <author email="a.khssnv@gmail.com">Alisher A. Khassanov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ros_opcua_communication</run_depend>
</package>
