<?xml version="1.0"?>
<package>
  <name>robonomics_game_supply</name>
  <version>0.0.0</version>
  <description>The robonomics game supply chain node</description>
  <maintainer email="mail@akru.me">Alexander Krupenkin</maintainer>
  <license>BSD3</license>
  <author email="mail@akru.me">Alexander Krupenkin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robonomics_game_common</run_depend>
  <run_depend>robonomics_market</run_depend>
  <run_depend>robonomics_liability</run_depend>

</package>
